--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-cabecalho></app-cabecalho>
 <main>
-<app-livro-inserir
-(livroAdicionado)="onLivroAdicionado($event)"
-></app-livro-inserir>
-<app-livro-lista [livros]="livros"></app-livro-lista>
+  <app-livro-inserir></app-livro-inserir>
+  <app-livro-lista></app-livro-lista>
 </main>
