--- a/src/app/livros/livro-lista/livro-lista.component.html
+++ b/src/app/livros/livro-lista/livro-lista.component.html
@@ -1,14 +1,16 @@
-<mat-accordion>
+<mat-accordion *ngIf="livros.length > 0">
   <mat-expansion-panel *ngFor="let livro of livros">
-  <mat-expansion-panel-header
-  >Titulo: {{ livro.titulo }}</mat-expansion-panel-header
-  >
-  <p>Id: {{ livro.id}}</p>
-  <p>Autor: {{ livro.autor }}</p>
-  <hr/>
-  <p>número de páginas: {{ livro.numero }}</p>
+  <mat-expansion-panel-header>Titulo: {{ livro.titulo }}</mat-expansion-panel-header
+    >
+    <p>Id: {{ livro.id}}</p>
+    <p>Autor: {{ livro.autor }}</p>
+    <p>Número: {{ livro.numero }}</p>
+  <mat-action-row>
+  <button mat-button color="primary">EDITAR</button>
+  <button mat-button color="warn">REMOVER</button>
+  </mat-action-row>
   </mat-expansion-panel>
-  </mat-accordion>
-  <p class="mat-body-1" style="text-align: center;" *ngIf="livros.length <= 0">
-    Nenhum livro cadastrado
-    </p>
+ </mat-accordion>
+ <p class="mat-body-1" style="text-align: center;" *ngIf="livros.length <= 0">
+  Nenhum livro cadastrado
+ </p>
