Listing insertion in MongoDB.

--- a/src/app/livros/livro-lista/livro-lista.component.html
+++ b/src/app/livros/livro-lista/livro-lista.component.html
@@ -2,7 +2,7 @@
   <mat-expansion-panel *ngFor="let livro of livros">
   <mat-expansion-panel-header>Titulo: {{ livro.titulo }}</mat-expansion-panel-header
     >
-    <p>Id: {{ livro.id}}</p>
+    <!-- <p>Id: {{ livro.id}}</p> -->
     <p>Autor: {{ livro.autor }}</p>
     <p>Número: {{ livro.numero }}</p>
   <mat-action-row>
