--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-cabecalho></app-cabecalho>
 <main>
-  <app-livro-inserir></app-livro-inserir>
-  <app-livro-lista></app-livro-lista>
+<router-outlet></router-outlet>
 </main>
