--- a/src/app/livros/livro-lista/livro-lista.component.html
+++ b/src/app/livros/livro-lista/livro-lista.component.html
@@ -7,7 +7,7 @@
     <p>Número: {{ livro.numero }}</p>
   <mat-action-row>
   <button mat-button color="primary">EDITAR</button>
-  <button mat-button color="warn">REMOVER</button>
+  <button mat-button color="warn" (click)="onDelete(livro.id)">REMOVER</button>
   </mat-action-row>
   </mat-expansion-panel>
  </mat-accordion>
