--- a/src/app/livros/livro-lista/livro-lista.component.html
+++ b/src/app/livros/livro-lista/livro-lista.component.html
@@ -6,7 +6,7 @@
     <p>Autor: {{ livro.autor }}</p>
     <p>Número: {{ livro.numero }}</p>
   <mat-action-row>
-  <button mat-button color="primary">EDITAR</button>
+    <button mat-button color="primary" [routerLink]="['/editar', livro.id]">EDITAR</button>
   <button mat-button color="warn" (click)="onDelete(livro.id)">REMOVER</button>
   </mat-action-row>
   </mat-expansion-panel>
