--- a/src/app/livros/livro-lista/livro-lista.component.html
+++ b/src/app/livros/livro-lista/livro-lista.component.html
@@ -1,4 +1,5 @@
-<mat-accordion *ngIf="livros.length > 0">
+<mat-spinner *ngIf="estaCarregando"></mat-spinner>
+<mat-accordion *ngIf="livros.length > 0 && !estaCarregando">
   <mat-expansion-panel *ngFor="let livro of livros">
   <mat-expansion-panel-header>Titulo: {{ livro.titulo }}</mat-expansion-panel-header
     >
@@ -11,6 +12,6 @@
   </mat-action-row>
   </mat-expansion-panel>
  </mat-accordion>
- <p class="mat-body-1" style="text-align: center;" *ngIf="livros.length <= 0">
+ <p class="mat-body-1" style="text-align: center" *ngIf="livros.length <= 0 && !estaCarregando">
   Nenhum livro cadastrado
  </p>
